2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b82

	* Bugfix: Fixed Jay's fix of Bug 904957 in b76.
		  Check was against $constant, but should against $real.

	* New: Gallery now uses GeekLogs Language.

	* Bugfix: Fixed problems where URLs to skin were wrong when no
		  or empty config.php

	* Changed: Changed Windows CRLF to Unix style in GeekLog classes.

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b81

	* 884488: 'else' required to NULL $myAlbum, otherwise the first
	  album name will propogate to the descriptions of all following
	  items. (Visual issue only)

2004-03-01  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-80

	* Tweaked a very small UI issue with the documentation link.
	  Bug #907219

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b79

	* Correction for 884488:  Rasmus Lerdorf noticed my missing isset()

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b78

	* Fix situation which could result in unquoted constants in
	  config.php

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b77

	* Bug 903062: Fix getImagePath's skin support
	  Patch submitted by Jacob DeGlopper, accepted with slight modification.

2004-03-01  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b76

	* Bug 884488 - Allow owners to hide and unhide their own albums, provided
	  that ownerCanModify or ownerCanDelete is allowed on the parent album.  This
	  also allows users to see their own hidden albums even if they don't own the
	  parent.

	* Bug 837132 - Temporary fix to prevent directory names which weren't submitted
	  with a trailing slash from being dropped completely during the filename 
	  generation process.  Applies only to URLs.

	* Bug 904957 - Prevents self-registration if the email feature is not enabled.
	  Also adds a new check to the config wizard which can detect and issue warnings 
	  if features are enabled without enabling their requirements.
