@@ -1,3 +1,9 @@
+2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b83
+
+	* Change: Reworked lib/lang.php. This should also fix Bug #907950
+
+	* Bugfix: Replaced some short php tags in GeekLog classes.
+
 2004-03-02 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b82
 
 	* Bugfix: Fixed Jay's fix of Bug 904957 in b76.
